# Events

2023-09-13-PlzPyvo34/: arduino-led-becnhmark.ino  cp-co2.py  cp-filter.py  cp-ikea.py  cp-neopixel.py  mp-led-benchmark.py  picosdk-led-benchmark.c
2023-09-15-PyconCZ/accesspoint-wip/: code.py
2023-09-15-PyconCZ/badge/: code.py  cozette-13.pcf  mb_setup.py
pico2_testing/fontain/: README.md
pico2_testing/fountain/: CMakeLists.txt  README.md  main-single_buffer-no_dma.c  main.c
random_help/ai_openscad/: README.md  chatgpt.scad  claude.scad  gemini.scad  grok.scad
random_help/czech_font/: code.py  czech.bdf  extra_font.py
